# ffplay-starter

./: CMakeLists.txt  README.md  config.h.in
cmake/: FindChardet.cmake  FindJsonC.cmake  FindPCRE.cmake  FindYaml.cmake
src/: chardet.cpp  chardet.h  chariconv.cpp  chariconv.h  cml.cpp  cml.h  configfile.cpp  configfile.h  console.cpp  console.h  fileop.cpp  fileop.h  jsonc.cpp  jsonc.h  main.cpp  starter.cpp  starter.h  util.cpp  util.h  yamlc.cpp  yamlc.h
